--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@uiball/loaders": "^1.2.6",
     "axios": "^1.3.5",
     "dotenv-webpack": "^8.0.1",
     "firebase": "^9.20.0",
     "jsdom": "^21.1.1",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
